[package]
name = "dxnats"
version = "0.1.0"
authors = ["Iain Calder <iain.calder@fasthosts.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-nats = { version = "0.41.0", optional = true }
dioxus = { version = "0.6.0", features = ["fullstack"] }
dioxus-logger = "0.6.2"
dioxus-sdk = "0.6.0"
futures = "0.3.31"
ndarray = "0.16.1"
tokio = { version = "1.45.1", features = ["full"], optional = true }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server", "dep:async-nats", "dep:tokio"]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
